--- a/reacthtml/src/App.css
+++ b/reacthtml/src/App.css
@@ -1,38 +1,424 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+html {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+	background-color: #0084ff;
+	font-size: 18px;
+	font-family: "Open Sans", sans-serif;
+	padding: 0;
+	margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-center {
+	text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+	color: #fff;
+	text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input,
+textarea {
+	padding: 0.75rem 1rem;
+	width: 100%;
+	border: 1px solid #c0c0c0;
+	margin-bottom: 0.5rem;
+	font-size: 1rem;
+	font-family: "Open Sans", sans-serif;
+}
+
+button {
+	font-size: 1.1rem;
+	padding: 1rem;
+	border: 0px;
+	width: 200px;
+	cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	padding: 0;
+	margin: 0;
+}
+
+h1 {
+	margin-bottom: 1rem;
+}
+
+.container {
+	max-width: 1800px;
+	margin: 0 auto;
+	padding: 1rem;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.row .col {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1;
+	position: relative;
+}
+
+.row .col.w-1 {
+	flex: 1;
+}
+
+.row .col.w-2 {
+	flex: 2;
+}
+
+.row .col.w-3 {
+	flex: 3;
+}
+
+.row .col.w-4 {
+	flex: 4;
+}
+
+.row .col.w-5 {
+	flex: 5;
+}
+
+.row .col.w-6 {
+	flex: 6;
+}
+
+.row .col.w-7 {
+	flex: 7;
+}
+
+.row .col.w-8 {
+	flex: 8;
+}
+
+.row .col.w-9 {
+	flex: 9;
+}
+
+.row .col.w-10 {
+	flex: 10;
+}
+
+.row .col.w-11 {
+	flex: 11;
+}
+
+.row .col.w-12 {
+	flex: 12;
+}
+
+.row .col img {
+	max-width: 100%;
+	height: auto;
+}
+
+.row .col.left {
+	margin-right: 1rem;
+}
+
+header {
+	background-color: #333;
+}
+
+header #menu {
+	display: none;
+}
+
+header nav {
+	color: #fff;
+	text-align: right;
+}
+
+header nav ul {
+	padding: 0;
+	margin: 0;
+}
+
+header nav ul li {
+	display: inline-block;
+	list-style-type: none;
+	margin-left: 2rem;
+}
+
+header nav ul li a {
+	line-height: 95px;
+	color: #fff;
+	text-decoration: none;
+}
+
+header nav ul li a.active,
+header nav ul li a:hover {
+	font-weight: bold;
+}
+
+header nav.visible {
+	display: block;
+}
+
+header::after {
+	content: "";
+	display: block;
+	clear: both;
+	float: none;
+}
+
+main {
+	color: #fff;
+}
+
+main .hero {
+	min-height: 65vh;
+	position: relative;
+	padding-top: 5rem;
+	margin-bottom: 12vh;
+}
+
+main .hero::before {
+	content: "";
+	background-image: url(https://images.unsplash.com/photo-1519046904884-53103b34b206?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
+	background-size: cover;
+	background-attachment: fixed;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	opacity: 0.25;
+	z-index: -1;
+}
+
+main .hero a.btn {
+	border: 1px solid #fff;
+	border-radius: 0.15rem;
+	display: inline-block;
+	width: 200px;
+	padding: 1rem;
+	margin-bottom: 1rem;
+	text-align: center;
+}
+
+main .hero a.btn:hover {
+	color: #333;
+	background-color: #fff;
+}
+
+main .hero .card {
+	min-height: 70vh;
+	position: absolute;
+	top: -50px;
+}
+
+main .card {
+	background-color: #fff;
+	color: #333;
+	padding: 1rem;
+	border-radius: 0.25rem;
+	width: calc(100%-2rem);
+}
+
+main .card button {
+	color: #fff;
+	background-color: #0084ff;
+	border: 1px solid transparent;
+}
+
+main .card button:hover {
+	color: #0084ff;
+	background-color: transparent;
+	border: 1px solid #0084ff;
+}
+
+main .icon {
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	background-color: #fff;
+	margin: 1rem auto;
+	outline: 5px solid rgba(255, 255, 255, 0.5);
+}
+
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 1rem;
+	margin-top: 1rem;
+}
+
+@media only screen and (max-width: 1024px) {
+	.row .col.w-1 {
+		flex: 1;
+	}
+	.row .col.w-2 {
+		flex: 1;
+	}
+	.row .col.w-3 {
+		flex: 1;
+	}
+	.row .col.w-4 {
+		flex: 1;
+	}
+	.row .col.w-5 {
+		flex: 1;
+	}
+	.row .col.w-6 {
+		flex: 1;
+	}
+	.row .col.w-7 {
+		flex: 1;
+	}
+	.row .col.w-8 {
+		flex: 1;
+	}
+	.row .col.w-9 {
+		flex: 1;
+	}
+	.row .col.w-10 {
+		flex: 1;
+	}
+	.row .col.w-11 {
+		flex: 1;
+	}
+	.row .col.w-12 {
+		flex: 1;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	body,
+	input,
+	textarea,
+	.btn,
+	button {
+		font-size: 0.85rem;
+	}
+	.row .col {
+		flex: auto;
+	}
+	.row .col.w-1 {
+		flex: auto;
+	}
+	.row .col.w-2 {
+		flex: auto;
+	}
+	.row .col.w-3 {
+		flex: auto;
+	}
+	.row .col.w-4 {
+		flex: auto;
+	}
+	.row .col.w-5 {
+		flex: auto;
+	}
+	.row .col.w-6 {
+		flex: auto;
+	}
+	.row .col.w-7 {
+		flex: auto;
+	}
+	.row .col.w-8 {
+		flex: auto;
+	}
+	.row .col.w-9 {
+		flex: auto;
+	}
+	.row .col.w-10 {
+		flex: auto;
+	}
+	.row .col.w-11 {
+		flex: auto;
+	}
+	.row .col.w-12 {
+		flex: auto;
+	}
+	.row .col.left {
+		margin-right: 0 !important;
+	}
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		text-align: center;
+	}
+	h1 {
+		font-size: 32px;
+	}
+	h2 {
+		font-size: 28px;
+	}
+	button,
+	.btn {
+		display: block;
+		width: 100%;
+	}
+	.hidden-sm {
+		display: none;
+	}
+	header {
+		margin-bottom: 0;
+	}
+	header .logo {
+		width: 100%;
+		text-align: center;
+	}
+	header #menu {
+		display: block;
+	}
+	header #menu button {
+		border: 0px;
+		background-color: #fff;
+		color: #333;
+		margin: 1rem 0;
+		font-weight: bold;
+	}
+	header nav {
+		display: none;
+		text-align: center;
+		padding: 0.5rem;
+		padding-top: 0;
+	}
+	header nav ul li {
+		padding: 0.5rem;
+		display: block;
+		margin-bottom: 0.5rem;
+		background-color: rgba(0, 0, 0, 0.5);
+		margin-left: 0;
+	}
+	header nav ul li a {
+		line-height: initial;
+	}
+	main .hero {
+		padding-top: 0;
+		margin-bottom: 1rem;
+	}
+	main .hero a.btn {
+		display: block;
+		width: 100%;
+	}
+	main .hero .card {
+		position: relative;
+		min-height: initial;
+		top: 0;
+	}
 }
