--- a/reacthtml/src/App.css
+++ b/reacthtml/src/App.css
@@ -195,8 +195,7 @@ main .hero {
 
 main .hero::before {
 	content: "";
-	background-image: url(https://images.unsplash.com/photo-1519046904884-53103b34b206?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
-	background-size: cover;
+	background-image: url(https://images.unsplash.com/photo-1462143338528-eca9936a4d09?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 	background-attachment: fixed;
 	position: absolute;
 	top: 0px;
@@ -421,4 +420,9 @@ footer {
 		min-height: initial;
 		top: 0;
 	}
+}
+
+#profile{
+	float: right;
+
 }
